--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="./css/sanitize.css" />
         <link rel="stylesheet" href="./css/style.css" />
         <title>TEP</title>
+        <script src="./js/script.js"></script>
     </head>
     <body>
         <h1>Hello HTML</h1>
@@ -13,5 +14,7 @@
             My first
             <a href="https://html.spec.whatwg.org">HTML</a>
         </p>
+        <button onclick="clickHandler()">JS</button>
+        <div id="box"></div>
     </body>
 </html>
